--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     Is Saturn the only planet in our solar system that has rings?
                 </h3>
                 <form onsubmit ="setTimeout(checker1, 1000); return false;">
-                    <input id="check1" type ="text" autofocus placeholder="">
+                    <input id="check1" type ="text" >
                     <input type = "submit" value = "Check Answer">
                 </form>
             </div>
@@ -141,7 +141,7 @@
                     How many moons (confirmed and unconfirmed) does Saturn have?
                 </h3>
                 <form onsubmit ="setTimeout(checker2, 1000); return false;">
-                    <input id="check2" type ="text" autofocus placeholder="">
+                    <input id="check2" type ="text" >
                     <input type = "submit" value = "Check Answer">
                 </form>
             </div>
