--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             function checker1()
                 {
                     var response1 = document.querySelector('#check1');
-                    if(response1.value == "no")
+                    if(response1.value == "no" || response1.value == "NO" || response1.value == "No")
                     {
                         colorGreen(response1, "fill1");
                     }
@@ -45,7 +45,7 @@
             function checker2()
                 {
                  var response2 = document.querySelector('#check2');
-                    if(response2.value == 82)
+                    if(response2.value == 82 || response2.value == "eighty-two" || response2.value == "Eighty-two")
                     {
                         colorGreen(response2, "fill2");
                     }
